# MLOPS-PROJECT

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cloudbuild.yaml  config.yaml  data.dvc  pyproject.toml  report.html  requirements_frontend.txt  ruff.toml  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: codecheck.yaml  coverage-tests.yaml  data_change.yaml  linting.yaml  model_registry.yaml  tests.yaml
configs/: README.md  config.yaml
configs/model/: alexnet.yaml  baseline.yaml  vgg16.yaml
configs/training/: default.yaml  quick.yaml
dockerfiles/: api.dockerfile  backend.dockerfile  cloud_train.dockerfile  frontend.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
outputs/2026-01-15/10-56-28/.hydra/: config.yaml  hydra.yaml
reports/: README.md  report.html  report.py
src/main_project/: api.py  backend.py  cloud_train.py  data.py  download_kaggle_dataset.py  drift.py  evaluate.py  frontend.py  model.py  old_cloud_train.py  train.py  visualize.py
tests/: test_data.py  test_model.py
tests/integration_tests/: test_api.py  test_backend.py  test_frontend.py
tests/performance_tests/: locustfile.py
tests/unit_tests/: test_model.py
wandb/: latest-run
wandb/run-20260115_105628-pakzn8mt/: run-pakzn8mt.wandb
wandb/run-20260115_105628-pakzn8mt/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260115_105628-pakzn8mt/files/models/: baseline_best.pth
